--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub Actions Deployment</title>
-</head>
-<body>
-    <h1>Hello, GitHub Actions!</h1>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Hello, GitHub Actions!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+      html,body{height:100%;margin:0;font:16px/1.5 system-ui,Segoe UI,Roboto,Helvetica,Arial}
+      .wrap{display:grid;place-items:center;height:100%}
+      .card{padding:2rem 3rem;border-radius:16px;box-shadow:0 10px 30px rgba(0,0,0,.08)}
+    </style>
+  </head>
+  <body>
+    <main class="wrap">
+      <div class="card">
+        <h1>Hello, GitHub Actions!</h1>
+        <p>If you can read this on Pages, the workflow worked 🎉</p>
+      </div>
+    </main>
+  </body>
 </html>
